yt-embedder somewhat fixed, can't call play on mobile devices programmatically

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -30,5 +30,5 @@ body{
   padding-top: 5px;
 }
 .buttonsWrapper button{
-  width: 33%;
+  width: 49.837%;
 }
